--- a/index.html
+++ b/index.html
@@ -12,12 +12,16 @@
     <header>
         <h1><span>[Enter name]</span>'s To do List:</h1>
     </header>
-    
-    <section class="todo">
 
+    <section class="task">
+        <h2>Enter task:</h2>
+        <input data-task class="task__input" type="text">
+        <button data-btn class="task__btn">Enter</button>
     </section>
-    <section class="done">
 
+    <section data-todo class="todo">        
+    </section>
+    <section data-done class="done">
     </section>
     
     <footer>
