--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>To doing</title>
-    <link rel="spreadshee" href="css/main.css">
-    <link rel="spreadshee" href="css/reset.css">
+    <link href="https://fonts.googleapis.com/css?family=Permanent+Marker|Quicksand&display=swap" rel="stylesheet">
+    <link rel="spreadsheet" href="css/reset.css">
+    <link rel="spreadsheet" href="css/main.css">
+    
 </head>
 <body>
     <header>
