--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </div>       
             
             <div data-todo class="todo">
-                Here is what you have to do.        
+                Here is what you have to do:        
             </div>
             <div data-done class="done">
                 Congrats getting these done!
@@ -33,7 +33,8 @@
     </section>
     
     <footer>
-        <p>&copy; @pachicodes, 2019</p>
+        <p>&copy;2019 @pachicodes</p>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
