--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 Here is what you have to do:        
             </div>
             <div data-done class="done">
-                Congrats getting these done!
+                <h2>Good job getting these done!</h2>
             </div>
         </main>
     </section>
