--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <section class="container">
         <header>
-            <h1><span>[Enter name]</span>'s To do List:</h1>
+            <h1><span data-span>Name</span>'s To do List:</h1>
         </header>
 
         <main>
