--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
                 <button data-btn class="task__btn">Enter</button>
             </div>       
             
-            <div data-todo class="todo">
-                Here is what you have to do:        
+            <div>
+                <ul data-list class="list"></ul>        
             </div>
-            <div data-done class="done">
+            <div class="done">
                 <h2>Good job getting these done!</h2>
             </div>
         </main>
